# Bachelor-s-Thesis

./: .gitignore  README.md
tabularOCR/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake  cppan.yml  main.cpp
tabularOCR/cmake/: external_json.cmake
tabularOCR/src/: testing_code.txt
tabularOCR/src/ocr_process/: process.cpp  process.h  temp.cpp  utils.cpp  utils.h
tabularOCR/src/preparation/: parser.cpp  parser.h
tabularOCR/src/preprocessing/: parser.cpp  parser.h  preprocess.cpp  preprocess.h
thesis/tex/thesis/: bibliography.bib  bibliography.tex  introduction.tex  layoutRecognition.tex  macros.tex  preface.tex  tableRecognitionImpl.tex  textRecognition.tex  thesis.tex
thesis/thesis/: bibliography.bib  bibliography.tex  epilog.tex  layoutRecognition.tex  macros.tex  preface.tex  refs.bib  results.tex  tableRecognitionImpl.tex  textRecognition.tex  thesis.tex  userGuide.tex
